# stealthflix

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: go.yml
backend/: .gitignore  go.mod  go.sum  main.go  server.go
backend/cmd/: clerk.go  librarian.go  mega.go  scraper.go
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts  media.ts  movies-api.service.ts
frontend/src/app/home/: home.component.html  home.component.ts
frontend/src/app/viewer/: viewer.component.html  viewer.component.ts
includes/: video.h
